[gd_scene load_steps=15 format=3 uid="uid://ucayjks3yaav"]

[ext_resource type="Script" path="res://player/player.gd" id="1_kqmg5"]
[ext_resource type="Resource" uid="uid://ueo5jn1twxkd" path="res://player/DefaultMovementData.tres" id="2_7agap"]
[ext_resource type="Texture2D" uid="uid://crw13mmf24qig" path="res://player/player.png" id="2_tggrb"]

[sub_resource type="AtlasTexture" id="AtlasTexture_hsd8s"]
atlas = ExtResource("2_tggrb")
region = Rect2(0, 0, 24, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_iv7sb"]
atlas = ExtResource("2_tggrb")
region = Rect2(144, 0, 24, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_7qdkv"]
atlas = ExtResource("2_tggrb")
region = Rect2(24, 0, 24, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_c87le"]
atlas = ExtResource("2_tggrb")
region = Rect2(48, 0, 24, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_utcyl"]
atlas = ExtResource("2_tggrb")
region = Rect2(72, 0, 24, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_yvq7w"]
atlas = ExtResource("2_tggrb")
region = Rect2(96, 0, 24, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_3mj0j"]
atlas = ExtResource("2_tggrb")
region = Rect2(120, 0, 24, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_yfh1c"]
atlas = ExtResource("2_tggrb")
region = Rect2(0, 0, 24, 20)

[sub_resource type="SpriteFrames" id="SpriteFrames_n4uvy"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hsd8s")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_iv7sb")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7qdkv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c87le")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_utcyl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yvq7w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3mj0j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yfh1c")
}],
"loop": true,
"name": &"run",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ltfmk"]
size = Vector2(8, 15)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ej22u"]
size = Vector2(6, 13)

[node name="Player" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 5
floor_constant_speed = true
floor_snap_length = 3.0
script = ExtResource("1_kqmg5")
movement_data = ExtResource("2_7agap")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -10)
sprite_frames = SubResource("SpriteFrames_n4uvy")
animation = &"idle"
frame_progress = 0.690978

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -7.5)
shape = SubResource("RectangleShape2D_ltfmk")

[node name="Coyote Jump Timer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="raycast_left_leg" type="RayCast2D" parent="."]
position = Vector2(-4, -2)
target_position = Vector2(-1, 0)

[node name="raycast_left_shoulder" type="RayCast2D" parent="."]
position = Vector2(-4, -8)
target_position = Vector2(-1, 0)

[node name="raycast_right_leg" type="RayCast2D" parent="."]
position = Vector2(4, -2)
target_position = Vector2(1, 0)

[node name="raycast_right_shoulder" type="RayCast2D" parent="."]
position = Vector2(4, -8)
target_position = Vector2(1, 0)

[node name="HazardDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="HazardDetector"]
position = Vector2(0, -7.5)
shape = SubResource("RectangleShape2D_ej22u")

[connection signal="area_entered" from="HazardDetector" to="." method="_on_hazard_detector_area_entered"]
